src/metrics/snapshots/big_code_analysis__metrics__loc__tests__csharp_comments.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 4,
  "lloc": 3,
  "cloc": 2,
  "blank": 0,
  "sloc_average": 6.0,
  "ploc_average": 4.0,
  "lloc_average": 3.0,
  "cloc_average": 2.0,
  "blank_average": 0.0,
  "sloc_min": 6,
  "sloc_max": 6,
  "cloc_min": 2,
  "cloc_max": 2,
  "ploc_min": 4,
  "ploc_max": 4,
  "lloc_min": 3,
  "lloc_max": 3,
  "blank_min": 0,
  "blank_max": 0
}
