src/metrics/snapshots/big_code_analysis__metrics__loc__tests__csharp_general_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 11,
  "ploc": 11,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.2,
  "ploc_average": 2.2,
  "lloc_average": 0.4,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1,
  "sloc_max": 11,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 1,
  "ploc_max": 11,
  "lloc_min": 1,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
