src/metrics/snapshots/big_code_analysis__metrics__loc__tests__csharp_statement_inline_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 1,
  "ploc": 1,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 1.0,
  "ploc_average": 1.0,
  "lloc_average": 2.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1,
  "sloc_max": 1,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 1,
  "ploc_max": 1,
  "lloc_min": 2,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
