src/metrics/snapshots/big_code_analysis__metrics__loc__tests__csharp_switch_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 6,
  "lloc": 8,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 6.0,
  "ploc_average": 6.0,
  "lloc_average": 8.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 6,
  "sloc_max": 6,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 6,
  "ploc_max": 6,
  "lloc_min": 8,
  "lloc_max": 8,
  "blank_min": 0,
  "blank_max": 0
}
