src/metrics/snapshots/big_code_analysis__metrics__loc__tests__csharp_using_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 11,
  "ploc": 11,
  "lloc": 4,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 3.6666666666666665,
  "ploc_average": 3.6666666666666665,
  "lloc_average": 1.3333333333333333,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 7,
  "sloc_max": 11,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 7,
  "ploc_max": 11,
  "lloc_min": 4,
  "lloc_max": 4,
  "blank_min": 0,
  "blank_max": 0
}
